Updated home page optimised for SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Visual design|Digital marketing|Web development-Creafix Design</title>
+  <title>Digital & Creative Media Agency | Christchurch NZ-Creafix Design</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Creafix Design is a web development, digital marketing and graphic design service provider based in New Zealand. We have experience building websites and e-commerce sites as well as developing brand identities and digital marketing services. " >
+  <meta name="description" content="Digital and Creative Media agency based in Christchurch, NZ. Learn more about how we can help you make the most of your digital presence." >
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   
@@ -116,18 +116,19 @@
   <div class="row">
     <div class="col-lg-7 col-xs-12 designer align-self-center">
       <h1 class="website-title">A complete marketing solution to everyday digital challenges</h1>
-<p class="bio-highlight web-intro">Is the day to day running of your business get in the way of updating or building your website? You know a well-built
-website with a solid digital marketing strategy would get you more customers. All this is daunting, complex and a lot of
-work. That's where we come in! <br>
+<p class="bio-highlight web-intro">
+  We help businesses improve the way they present themselves online and make digital tools and media work better for them.
+  We combine our expertise in branding, digital marketing strategy, social media integration, SEO and website design to
+  achieve visible results.<br>
 
-I help businesses improve the way they present themselves online and make digital tools work for them. I combine
-expertise on branding, digital marketing strategy, social media integration and website development to achieve visible
-results.<br>
-Providing these services in one package means that you only need to deal with one person, one invoice and benefit from
-no disconnect between the contractors managing your digital presence.<br>
+  Providing these services in one package means that you only need to deal with one digital creative agency, one invoice
+  and benefit from no disconnect between the contractors managing your digital presence.<br>
 
-Each business is unique. Understanding your business objectives is the key to build a bespoke action plan that will help
-you reach your goals while you stay free to focus on what you do best.</p>
+  Each business is unique. For us, understanding your business objectives is the key to build a bespoke action plan that
+  will help you reach your goals while you stay free to focus on what you do best.
+
+  
+  </p>
     </div>
     
     <div class="col-lg-5 mt-2 mb-2 col-xs-12 align-self-center">
@@ -187,19 +188,16 @@ you reach your goals while you stay free to focus on what you do best.</p>
       <img src="./images/Mascot who am I.PNG" alt="Creafix Mascot who am I" class="img-fluid mx-auto d-block mascot">
     </div>
     <div class="col-lg-7 col-xs-12">
-      <p class="bio">Creafix Design is a digital freelance agency directed by me, Audrey! I am based in Christchurch, New Zealand and operate
-      nationwide. For the last few years, we have worked with businesses around the Canterbury region across a range of
-      industries. We work with small and medium businesses make the most of their digital presence to help them thrive. We are
-      experts at building brand and digital marketing strategies alongside developing websites to convert your online visitors
-      into customers.<br>
-      We take time to get to know each business we work with to understand what make them who they are and what challenges they
-      are facing. This helps us provide the best bespoke solutions for each unique business. This flexibility also means that
-      we can take over your digital marketing completely on an on-going basis or simply land a hand when needed for a one-off
-      project.<br>
-      As a former engineer, it's probably no surprise that I like problem solving and efficient design. This is why we apply
-      the KISS (acronym for "Keep It Simple, Stupid") principle which helps prioritising tasks and implement projects more
-      efficiently. This helps our customers save time and money but also provides transparency to helps them understand what we
-      are doing for them.</p>
+      <p class="bio">
+        Creafix Design is a digital creative agency directed by me, Audrey! I am based in Christchurch, New Zealand and operate
+        nationwide. For the last few years, we have worked with businesses around the Canterbury region across a range of
+        industries. We work with small and medium businesses helping them make the most of their digital marketing and online
+        presence to help them thrive. We are experts at building brand and digital marketing strategies alongside developing
+        websites to convert your online visitors into customers.<br>
+        We take time to get to know each business we work with to understand what make them who they are and what challenges
+        they are facing. This helps us provide the best bespoke solutions for each unique business.
+
+       </p>
       <div class="contact-button">
         <a href="about.html" class="contact-link" title="Learn more about me">Learn more about us</a>
       </div>
@@ -224,8 +222,8 @@ you reach your goals while you stay free to focus on what you do best.</p>
       deliver the best action plan for maximising the effect of your digital tools.</p>
       <ul>
         <li class="bio-list">◼ One stop shop for a complete offer: all the services you need to maximise your digital marketing reach. You only have
-      one agency to deal with, and one bill to pay. This saves you time coordinating several contractors and reduces the risks
-      of miscommunication for the implementation of the strategy.</li>
+        one creative agency to deal with, and one bill to pay. This saves you time coordinating several contractors and reduces
+        the risks of miscommunication for the implementation of the strategy.</li>
         <li class="bio-list"> ◼ Keep it simple: Running a business requires a lot of brain power and time; that's why we like to keep things as
       straightforward as possible so that you can stay in the loop and understand what we are working on without having the
       become an expert on the subject.</li>
