--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <title>Who are we-Creafix Design </title>
+  <title>Who are we | Christchurch NZ-Creafix Design</title>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design is based on a team of experts ready to help your business.">
+    content="Experienced Designer, Developers & Marketers ready to help you grow your business digitally. Click to learn more about our expertise.">
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -136,30 +136,26 @@
         <p class="bio-highlight mb-1">
           French born engineer turned visual designer and front end developer who's happy to call New Zealand home.</p>
         <p class="bio mb-1">
-          I am passionate about design and digital technologies; I love to know how things work (hello engineering
-          brain!) but also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine
-          these two sides of my brain has been a revelation and encouraged me to start Creafix Design.
-          The desire to help businesses create media that helps promote brands, products and information to their
-          customers is the foundation or "raison de vivre" of Creafix Design.😃
+          I am passionate about design and digital technologies; I love to know how things work (hello engineering brain!) but
+          also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine these two
+          sides of my brain has been a revelation and encouraged me to start Creafix Design. The desire to help businesses create
+          media that helps promote brands, products and information to their customers is the foundation or "raison de vivre" of
+          Creafix Design.😃
         <br/>
-          To acheive this, I associate with a trusted team of creative contractors such as Copywriters or Social Media Managers that provides support when needed to create the best bespoke solution for your business.
+          To achieve this, I associate with a trusted team of creative contractors such as Copywriters or Social Media Managers
+          that provides support when needed to create the best bespoke solution for your business.
         </p><br />
         <p class="bio mb-1">
-          I have been working as a product designer for a number of years, focusing heavily on analysing problems and
-          identifying users needs.
-          This is the reason why I love getting to know my clients personally and being part of their projects or
-          business ideas as I believe it is the key to identifying the essence of their business and reaching out to their ideal
-          audience.
+        I have been working as a product designer for several years, focusing heavily on analysing problems and identifying
+        user’s needs. This is the reason why I love getting to know my clients personally and being part of their projects or
+        business ideas as I believe it is the key to identifying the essence of their business and reaching out to their ideal
+        audience.
         </p> <br />
         <p class="bio mb-1">
-          I'm happiest when I'm creating, learning, exploring and thinking about how to make things better. Currently, I
-          am available to take on new work, feel free to reach out and say hello even if you haven't got a
-          project in mind yet!
+          I'm happiest when I'm creating, learning, exploring, and thinking about how to make things better. Feel free to reach
+          out and say hello even if you haven't got a project in mind yet!
         </p><br />
-        <p class="bio mb-1">
-          We can help with creating beautiful functional websites, eye catching branding and graphics. Click below to
-          learn more.
-        </p>
+       
       </div>
 
     </div>
@@ -179,12 +175,12 @@
 </div>
 <div class="accordion-item-body">
   <div class="accordion-item-body-content">
-We design static and dynamic websites depending on requirements.<br/>
+We design static and dynamic websites.<br/>
  This service includes recommendation on whether a fully coded customised website is required or use of a CMS
   platform is more suitable.
   We take you through the entire process from creating the layout via wireframes to registering your domain, hosting
   and publishing your website for the world to see.
-  We pay particular attention to optimising my designs for basic SEO, and we include strong considerations to the user
+  We pay particular attention to optimising my designs for SEO, and we include strong considerations to the user
   interface and experience (UI/UX).
 
 <div class="tools">
@@ -362,6 +358,7 @@ We design static and dynamic websites depending on requirements.<br/>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
       We are confident using several social media platforms, creating content strategies and managing paid advertisement.
+      We can help you integrate your CRM platform with your website and help you manage your email list.
       <div class="tools">
         <h5> Skills & Tools</h5>
         <div class="row">
