Optimised brand strategy for SEO

--- a/creative-services/brandstrategy.html
+++ b/creative-services/brandstrategy.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Brand strategy creation-Creafix Design</title>
+  <title>Brand Strategy Development | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design offers support to many businesses helping them create brands they are proud of.">
+    content="Need help developing a brand strategy that will help you stand out from the crowd? Click to learn more about what we can help with. ">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -127,22 +127,33 @@
 <img src="../images/brand%20strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
       </div>
       <div class="col">
-    <p class=" mb-1 bio">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
-  you create a brand that represents you and communicates for you by creating the suite of brand marketing collateral that
-  you need for promoting your business.</br>
+    <p class=" mb-1 bio">
+      Are you starting up a new business? Or are you thinking about refreshing the look of your current business? We can help
+      you develop your brand strategy and help you put together a program that will help you stand out as a brand and reach
+      your ideal customers. Along the strategy, we can help you create the branding elements that represents you and
+      communicates for you by creating the suite of marketing collateral that you need for promoting your business.</br>
   We can help you create the following elements:
   </p>
     <p class=" mb-1">
     <ul> 
-  <li class="bio-list">◼ Logo creation</li>
+  <li class="bio-list">◼ Complete Brand Strategy development</li>
+  <li class="bio-list">◼ Consolidate business objectives</li>
+  <li class="bio-list">◼ Identify your target customers</li>
+  <li class="bio-list">◼ Research and build customer persona</li>
+  <li class="bio-list">◼ Develop your brand positioning</li>
+  <li class="bio-list">◼ Develop messaging strategies for each target market</li>
+  <li class="bio-list">◼ Develop your brand identity</li>
+  <li class="bio-list">◼ Develop your content marketing strategy</li>
+  <li class="bio-list">◼ <a href="logodesign.html">Logo creation</a></li>
   <li class="bio-list">◼ Brand guidelines</li>
   <li class="bio-list">◼ Business Cards</li>
-  <li class="bio-list">◼ Letterheads</li>
+  <li class="bio-list">◼ <a href="templates.html">Letterheads</a></li>
   <li class="bio-list">◼ Signage</li>
   <li class="bio-list">◼ Advertisement design</li>
   <li class="bio-list">◼ Graphic design</li>
-  <li class="bio-list">◼ Web design</li>
+  <li class="bio-list">◼ <a href="./../web-development/webdesign.html">Web design</a></li>
   <li class="bio-list">◼ Presentation decks and proposal design</li>
+
 </ul>
 </p>
 </div>
