--- a/creative-services/logodesign.html
+++ b/creative-services/logodesign.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Logo design|Icon design|Rebrand-Creafix Design</title>
+  <title>Logo Design | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design offers logo design services to businesses to help them stand out.">
+    content="Are you looking for a new logo or rebrand? Click to learn more about the ways we can help you stand out.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -129,12 +129,17 @@
       <div class="col">
         <p class=" mb-1 bio">Your logo is a key part of your brand identity and is often the first thing your customers will see and remember. I can
         help you design a memorable logo that does the talking for you to make you stand out from the pack. The logo design is
-        usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context.
-       </br>
+        usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context. We
+        also recommend building your brand development strategy with us to ensure your identity lines up with your business
+        objectives.</br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
+          <li class="bio-list">◼ Colour palette research</li>
+          <li class="bio-list">◼ Competitor logo analysis and review</li>
+          <li class="bio-list">◼ Moodboard</li>
+          <li class="bio-list">◼ Review of the feelings/emotions we want the brand to convey</li>
           <li class="bio-list">◼ Logo creation</li>
           <li class="bio-list">◼ Icon design</li>
           <li class="bio-list">◼ Branding creation</li>
