added internal links to logo design pages

--- a/creative-services/logodesign.html
+++ b/creative-services/logodesign.html
@@ -142,12 +142,12 @@
           <li class="bio-list">◼ Review of the feelings/emotions we want the brand to convey</li>
           <li class="bio-list">◼ Logo creation</li>
           <li class="bio-list">◼ Icon design</li>
-          <li class="bio-list">◼ Branding creation</li>
+          <li class="bio-list">◼ <a href="brandstrategy.html">Branding creation</a></li>
           <li class="bio-list">◼ Rebranding</li>
           <li class="bio-list">◼ Brand style guides</li>
           <li class="bio-list">◼ Brand and logo assets</li>
-          <li class="bio-list">◼ Templates</li>
-          <li class="bio-list">◼ Marketing collateral</li>
+          <li class="bio-list">◼ <a href="templates.html">Templates</a></li>
+          <li class="bio-list">◼ <a href="marketingcollateral.html">Marketing collateral</a></li>
         </ul>
 
         </p>
