Update marketing material page

--- a/creative-services/marketingcollateral.html
+++ b/creative-services/marketingcollateral.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Marketing material|Marketing collateral creation-Creafix Design</title>
+  <title>Marketing Material & Graphics | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design design all kind of marketing material and collateral for businesses.">
+    content="Did you know we help businesses like yours create brochures and graphics that promotes your business? Click to learn more about how we can help.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -119,7 +119,7 @@
 
 
   <div class="title">
-    <h1 class="title">Marketing material and collateral</h1>
+    <h1 class="title">Marketing material and graphic design</h1>
   </div>
   <div class="container">
     <div class="row">
@@ -127,22 +127,27 @@
         <img src="../images/mockup.png" alt="sample colour palettes for selection" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Well-crafted marketing material can help you catch the attention of your potential customers. It is really important to
-        know who your audience is before creating advertising material. We can help with this and make sure that each piece is
-        targeting the right customers.
-        To help convince your customers to buy your product, we can help you build trust by creating with you the marketing
-        collateral that will set you as an authority in your industry.
+        <p class=" mb-1 bio">Well-crafted marketing material can help you catch the attention of your potential customers. This material can vary
+        largely depending on your marketing objectives; it could be a simple effective advertising flyer to a complete product
+        advertising catalogue.
+        It is important to know who your audience is before creating advertising material. We can help you put together a <a href="./brandstrategy.html">branding</a> and <a href="./../digital-marketing/digitalstrategy.html">marketing strategy</a> that will make sure
+        that each piece is targeting the right customers. To help convince your customers to buy your product, we can help you
+        build trust by creating with you the marketing collateral that will set you as an authority in your industry.
+          
           </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
+          <li class="bio-list">◼ <a href="./brandstrategy.html">Identify your target customers</a></li>
+          <li class="bio-list">◼ <a href="./brandstrategy.html">Research and build customer persona</a></li>
           <li class="bio-list">◼ Brochure design</li>
           <li class="bio-list">◼ Product catalogue design</li>
           <li class="bio-list">◼ Postcards and thank you cards</li>
           <li class="bio-list">◼ Flyer design</li>
           <li class="bio-list">◼ Poster design</li>
           <li class="bio-list">◼ Infographic design</li>
+          <li class="bio-list">◼ Graphic design</li>
           <li class="bio-list">◼ Print and digital advertisement</li>
           <li class="bio-list">◼ Social media advertisement</li>
           <li class="bio-list">◼ Banner design</li>
@@ -150,9 +155,9 @@
           <li class="bio-list">◼ Sign and flag design</li>
           <li class="bio-list">◼ Apparel and uniform branding</li>
           <li class="bio-list">◼ Newsletter and blog posts template</li>
-          <li class="bio-list">◼ Case studies template</li>
+          <li class="bio-list">◼ <a href="./templates.html">Case studies template</a></li>
           <li class="bio-list">◼ Testimonial and video explainer script and design</li>
-          <li class="bio-list">◼ Landing page design</li>
+          <li class="bio-list">◼ <a href="./../web-development/landingpages.html">Landing page design</a></li>
         </ul>
 
         </p>
