Updated Templates page and navigation on all pages

--- a/creative-services/brandstrategy.html
+++ b/creative-services/brandstrategy.html
@@ -75,9 +75,9 @@
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
           <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+              Graphic Design</a></li>
+          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
