--- a/creative-services/templates.html
+++ b/creative-services/templates.html
@@ -61,65 +61,64 @@
 </head>
 
 <body>
-  <nav>
-    <ul class="menu" id="navbar">
-      <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
-            alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
-  
-      <li class="nav-item dropdown item">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Creative Services
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="templates.html">Presentation and proposal template</a>
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown item">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Digital Marketing
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
-          </li>
-          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
-          </li>
-          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown item">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Web Development
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
-          </li>
-          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
-        </ul>
-      </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../about.html" title="About">About</a></li>
-      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
-      <li class="toggle"> <span class="bars"></span></li>
-  
-  
-    </ul>
-  </nav>
+<nav>
+  <ul class="menu" id="navbar">
+    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+          alt="creafix design logo" width="150" /></a></li>
+    <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
 
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Creative Services
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+            Graphic Design</a></li>
+        <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+        </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Digital Marketing
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        </li>
+        <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
+        </li>
+        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Web Development
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+        </li>
+        <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+      </ul>
+    </li>
+    <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="../about.html" title="About">About</a></li>
+    <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
+    <li class="toggle"> <span class="bars"></span></li>
+
+
+  </ul>
+</nav>
 
   <div class="title">
-    <h1 class="title">Presentation and proposal template</h1>
+    <h1 class="title">Presentation and proposal templates</h1>
   </div>
   <div class="container">
     <div class="row">
@@ -127,12 +126,15 @@
         <img src="../images/presentation.jpg" alt="presentation on laptop screen" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
-        presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
-        communicate effectively.
-        We can create a template for you to use as a base for every presentation or help you design your next top notch deck by
-        structuring the message and design layout that will set you up for success.
-
+        <p class=" mb-1 bio">
+          Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
+          presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
+          communicate effectively. We can create a template for you to use as a base for every presentation or help you design
+          your next top notch deck by structuring the message and design layout that will set you up for success. We can also help
+          you create compelling graphics that will convey your message effectively and rapidly.
+          As well as creating templates, we can format your Word or Google Docs documents to fix all the funky formatting errors
+          and stop you from pulling your hair out!
+                   
           </br>
           We can help you with:
         </p>
@@ -142,6 +144,15 @@
           <li class="bio-list">◼ Google Slide presentation</li>
           <li class="bio-list">◼ Webinar slide deck design</li>
           <li class="bio-list">◼ Proposal template</li>
+          <li class="bio-list">◼ Letter head templates</li>
+          <li class="bio-list">◼ Internal document template</li>
+          <li class="bio-list">◼ Email formatting template</li>
+          <li class="bio-list">◼ Client report template</li>
+          <li class="bio-list">◼ <a href="./marketingcollateral.html">Graphic design</a></li>
+          <li class="bio-list">◼ General formatting help on Microsoft Word or Google Docs</li>
+
+
+
       
         </ul>
         </p>
