--- a/mywork.html
+++ b/mywork.html
@@ -75,9 +75,10 @@
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" href="./../creative-services/brandstrategy.html">Branding Strategy</a></li>
         <li><a class="dropdown-item" href="./../creative-services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing material and
-            collateral</a></li>
-        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and proposal template</a>
+        <li><a class="dropdown-item" href="./../creative-services/marketingcollateral.html">Marketing Material and
+            Graphic Design</a></li>
+        <li><a class="dropdown-item" href="./../creative-services/templates.html">Presentation and Proposal
+            Templates</a>
         </li>
       </ul>
     </li>
@@ -116,7 +117,6 @@
 
   </ul>
 </nav>
-
 <div class="top-line-title" id="about"></div>
 <div class="title">
   <h1 class="title">Projects</h1>
