--- a/creative-services/logodesign.html
+++ b/creative-services/logodesign.html
@@ -61,61 +61,61 @@
 </head>
 
 <body>
-  <nav>
-    <ul class="menu" id="navbar">
-      <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
-            alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
-  
-      <li class="nav-item dropdown item">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Creative Services
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="templates.html">Presentation and proposal template</a>
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown item">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Digital Marketing
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
-          </li>
-          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
-          </li>
-          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown item">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Web Development
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
-          </li>
-          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
-        </ul>
-      </li>
-      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
-      <li class="item"> <a href="../about.html" title="About">About</a></li>
-      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
-      <li class="toggle"> <span class="bars"></span></li>
-  
-  
-    </ul>
-  </nav>
+<nav>
+  <ul class="menu" id="navbar">
+    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+          alt="creafix design logo" width="150" /></a></li>
+    <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
+
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Creative Services
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+            Graphic Design</a></li>
+        <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
+        </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Digital Marketing
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        </li>
+        <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
+        </li>
+        <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Web Development
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
+        </li>
+        <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
+      </ul>
+    </li>
+    <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="../about.html" title="About">About</a></li>
+    <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
+    <li class="toggle"> <span class="bars"></span></li>
+
+
+  </ul>
+</nav>
 
   <div class="title">
     <h1 class="title">Logo Design</h1>
