--- a/digital-marketing/smmanagement.html
+++ b/digital-marketing/smmanagement.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+              Graphic Design</a></li>
+          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -87,12 +87,12 @@
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="../digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="../digital-marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="../digital-marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
       <li class="nav-item dropdown item">
