--- a/web-development/webdesign.html
+++ b/web-development/webdesign.html
@@ -73,11 +73,11 @@
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and proposal template</a>
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+              Graphic Design</a></li>
+          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -101,11 +101,11 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
       <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
@@ -116,7 +116,6 @@
   
     </ul>
   </nav>
-
   <div class="title">
     <h1 class="title">Website Design & Development</h1>
   </div>
