--- a/web-development/websiteaudit.html
+++ b/web-development/websiteaudit.html
@@ -66,19 +66,18 @@
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
-
+  
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="../creative-services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="../creative-services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="../creative-services/marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="../creative-services/templates.html">Presentation and proposal
-              template</a>
+          <li><a class="dropdown-item" href="brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="marketingcollateral.html">Marketing Material and
+              Graphic Design</a></li>
+          <li><a class="dropdown-item" href="templates.html">Presentation and Proposal Templates</a>
           </li>
         </ul>
       </li>
@@ -102,19 +101,19 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web-development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web-development/landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web-development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
       <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
       <li class="item"> <a href="../about.html" title="About">About</a></li>
       <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
-
-
+  
+  
     </ul>
   </nav>
 
