Updated templates title and description

--- a/creative-services/templates.html
+++ b/creative-services/templates.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Presentations|Proposals|Reports templates-Creafix Design</title>
+  <title>Document templates & formatting | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design can create your next set of template for reports, proposals and presentations.">
+    content="Struggling to create tidy template documents for your business? Click to learn more about what we can do to help.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
