Updated digital strategy for SEO

--- a/digital-marketing/digitalstrategy.html
+++ b/digital-marketing/digitalstrategy.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Digital marketing strategies-Creafix Design</title>
+  <title>Digital marketing strategies | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design is experience in providing complete digital marketing strategies to businesses to help them flourish.">
+    content="Looking to promote your business online but not sure where to start? Click to learn how we can support you with your digital marketing goals.">
   <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -126,25 +126,33 @@
         <img src="../images/marteking%20strategy.jpg" alt="Top view of desk with marketing strategy written on piece of paper" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Considering most consumers have now more contacts with brands online via smartphones or computers than ever, it is
-        increasingly important to put together a digital strategy to interact with your audience effectively and turn them into
-        paying customers. A digital marketing strategy focuses on establishing the specific and achievable goals for marketing
-        through online channels. With the goals established, various tactics can then be put in place to achieve our marketing
-        objectives.
+        <p class=" mb-1 bio">
+          Most consumers have now more contacts with brands online via smartphones or computers than ever, it is
+          increasingly important to put together a digital strategy to interact with your audience effectively and turn them into
+          paying customers. A digital marketing strategy focuses on establishing the specific and achievable goals for marketing
+          through online channels. With the goals established, various tactics can then be put in place to achieve our marketing
+          objectives. We can work with you to create or update your digital strategy to meet your sales targets.
+          
           </br>
           We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
           <li class="bio-list">◼ Digital marketing strategy</li>
+          <li class="bio-list">◼ Identify the best suitable marketing/advertising channels</li>
           <li class="bio-list">◼ Digital marketing assessment</li>
-          <li class="bio-list">◼ Buyer persona creation</li>
-          <li class="bio-list">◼ Search Engine Optimisation (SEO)</li>
-          <li class="bio-list">◼ Social Media Marketing (SMM)</li>
+          <li class="bio-list">◼ <a href="./../creative-services/brandstrategy.html">Buyer persona creation</a></li>
+          <li class="bio-list">◼ <a href="./../web-development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li class="bio-list">◼ <a href="./smmanagement.html">Social Media Marketing (SMM)</a></li>
+          <li class="bio-list">◼ Build up your emails list</li>
+          <li class="bio-list">◼ Lead magnet creation</li>
+          <li class="bio-list">◼ <a href="./../creative-services/brandstrategy.html">Create your customer journey</a></li>
+          <li class="bio-list">◼ Create your ideal sales funnel that converts</li>
+          <li class="bio-list">◼ Overall conversion rate optimisation</li>
           <li class="bio-list">◼ Digital advertising</li>
           <li class="bio-list">◼ Content Marketing</li>
-          <li class="bio-list">◼ Website marketing and landing pages</li>
-          <li class="bio-list">◼ Email Marketing</li>
+          <li class="bio-list">◼ <a href="./../web-development/landingpages.html">Website marketing and landing pages</a></li>
+          <li class="bio-list">◼ <a href="./emailmarketing.html">Email Marketing</a></li>
           <li class="bio-list">◼ Downloadable content</li>
         </ul>
         </p>
