--- a/digital-marketing/emailmarketing.html
+++ b/digital-marketing/emailmarketing.html
@@ -148,7 +148,7 @@
           <li class="bio-list">◼ Newsletter creation</li>
           <li class="bio-list">◼ Email advertisement and design</li>
           <li class="bio-list">◼ Email sequence scheduling and strategy</li>
-          <li class="bio-list">◼ Email marketing statistics to identify what works and what doesn't do so well</li>
+          <li class="bio-list">◼ Email marketing statistics to identify what works</li>
           <li class="bio-list">◼ Build your lead magnet</li>
           <li class="bio-list">◼ Build your email list</li>
           <li class="bio-list">◼ Create your ideal sales funnel</li>
