Added internal links

--- a/digital-marketing/emailmarketing.html
+++ b/digital-marketing/emailmarketing.html
@@ -143,15 +143,14 @@
         </p>
         <p class=" mb-1">
         <ul>
-          <li class="bio-list">◼ Landing pages to build your email list</li>
+          <li class="bio-list">◼ <a href="./../web-development/landingpages.html">Landing pages to build your email list</a></li>
           <li class="bio-list">◼ Email campaign marketing</li>
           <li class="bio-list">◼ Newsletter creation</li>
           <li class="bio-list">◼ Email advertisement and design</li>
           <li class="bio-list">◼ Email sequence scheduling and strategy</li>
           <li class="bio-list">◼ Email marketing statistics to identify what works</li>
-          <li class="bio-list">◼ Build your lead magnet</li>
-          <li class="bio-list">◼ Build your email list</li>
-          <li class="bio-list">◼ Create your ideal sales funnel</li>
+          <li class="bio-list">◼ <a href="./digitalstrategy.html">Build your lead magnet</a></li>
+          <li class="bio-list">◼ <a href="./digitalstrategy.html">Create your ideal sales funnel</a></li>
           <li class="bio-list">◼ CRM integrations</li>
           <li class="bio-list">◼ Email list management</li>
           <li class="bio-list">◼ Mailchimp campaigns</li>
