Update smm page for SEO

--- a/digital-marketing/smmanagement.html
+++ b/digital-marketing/smmanagement.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Social media marketing strategies-Creafix Design</title>
+  <title>Social media management services | Christchurch NZ-Creafix Design</title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design helps businesses with their social media marketing strategies to help them make the most out of the platforms they are using.">
+    content="Struggling with inconsistent business activities and posts on social media? We are here to help; click to learn how we can assist you with it.">
 <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
@@ -127,14 +127,18 @@
           alt="Word audience written on whiteboard" class="service-image">
       </div>
       <div class="col">
-        <p class=" mb-1 bio">Wanting to increase traffic to your website or reach more customers? Social Media marketing can be an option for your
-        business. After understanding your marketing objectives, we can help you select the most relevant social media
-        platform(s) for your target audience and put a plan in place to make use of your social media potential.
-        Not sure if social media is the tool for you? Here is the top 3 benefits:
-        - Increase your brand awareness
-        - Generate leads and boost conversion
-        - Nurture relationship with customers
-
+        <p class=" mb-1 bio">
+          Wanting to increase traffic to your website or reach more customers? Social Media marketing can be an option for your
+          business. After understanding your marketing objectives, we can help you select the most relevant social media
+          platform(s) for your target audience and put a plan in place to make use of your social media potential. We can help you
+          manage your social media plan in different ways depending on your level of expertise or the amount of time you have
+          available. <br/>
+          Not sure if social media is the tool for you? Here are the top 3 benefits: 
+          <ul>
+          <li>- Increase your brand awareness </li>
+          <li>- Generate leads and boost conversion </li>
+          <li>- Nurture relationship with customers</li>
+          </ul>
           </br>
           We can help you with:
         </p>
@@ -147,6 +151,15 @@
           <li class="bio-list">◼ LinkedIn</li>
           <li class="bio-list">◼ Pinterest</li>
           <li class="bio-list">◼ Monitor social media metrics (reach, engagement, etc.)</li>
+          <li class="bio-list">◼ Social Media Management</li>
+          <li class="bio-list">◼ Ad content creation</li>
+          <li class="bio-list">◼ Marketing caption</li>
+          <li class="bio-list">◼ Setup of Facebook business page</li>
+          <li class="bio-list">◼ Setup of LinkedIn business page</li>
+          <li class="bio-list">◼ Social media posting schedule</li>
+          <li class="bio-list">◼ Content creation</li>
+          <li class="bio-list">◼ Creation of graphics or material to publish on</li>
+
         </ul>
 
         </p>
