--- a/digital-marketing/smmanagement.html
+++ b/digital-marketing/smmanagement.html
@@ -135,12 +135,12 @@
           available. <br/>
           Not sure if social media is the tool for you? Here are the top 3 benefits: 
           <ul>
-          <li>- Increase your brand awareness </li>
-          <li>- Generate leads and boost conversion </li>
-          <li>- Nurture relationship with customers</li>
+          <li class="bio-list">- Increase your brand awareness </li>
+          <li class="bio-list">- Generate leads and boost conversion </li>
+          <li class="bio-list">- Nurture relationship with customers</li>
           </ul>
-          </br>
-          We can help you with:
+          </p>        
+          <p class=" mb-1 bio">We can help you with:
         </p>
         <p class=" mb-1">
         <ul>
