added internal links

--- a/digital-marketing/smmanagement.html
+++ b/digital-marketing/smmanagement.html
@@ -157,8 +157,8 @@
           <li class="bio-list">◼ Setup of Facebook business page</li>
           <li class="bio-list">◼ Setup of LinkedIn business page</li>
           <li class="bio-list">◼ Social media posting schedule</li>
-          <li class="bio-list">◼ Content creation</li>
-          <li class="bio-list">◼ Creation of graphics or material to publish on</li>
+          <li class="bio-list">◼ <a href="./../creative-services/marketingcollateral.html">Content creation</a></li>
+          <li class="bio-list">◼ <a href="./../creative-services/marketingcollateral.html">Creation of graphics or material to publish</a></li>
 
         </ul>
 
